# FastMM

./: CMakeLists.txt  README.md  main.cc  matmult.hpp  matmult_cache.hpp  plot.py  timer.hpp  util.hpp
